# multi_jackal

./: README.md
multi_jackal_base/: package.xml
multi_jackal_base/launch/: jackal_base.launch
multi_jackal_description/launch/: jackal_description.launch
multi_jackal_description/meshes/: ears_frame.stl
multi_jackal_description/urdf/: base_accessories.urdf.xacro  custom_accessories.urdf.xacro  jackal.gazebo  (+1 more)
multi_jackal_nav/: CMakeLists.txt  package.xml
multi_jackal_tutorials/: CMakeLists.txt  home_navigate_pose_goals.yaml  home_vacuum_pose_goals.yaml  inspection_pose_goals_in_map.yaml  inspection_pose_list.txt  package.xml  pose_goals.yaml  pose_goals_in_map.yaml  pose_list.txt  setup.py
multi_jackal_tutorials/action/: ChargeWarthog.action  NavigateWaypoint.action  Wait.action
multi_jackal_tutorials/config/: config_battery_mockup.yaml  inspection_waypoints.yaml  navigation_waypoints.yaml
multi_jackal_tutorials/launch/: battery_test.launch  jackal_with_gps.launch  one_jackal_fake_localization.launch  testing_jackals.launch  testing_warthog.launch  three_jackal_inspection.launch  three_robot_inspection.launch  view_model.launch
multi_jackal_tutorials/rviz/: model.rviz  three_jackal_inspection.rviz  view_system.launch
multi_jackal_tutorials/src/: ChargeActionServer  CheckBatteryActionServer  HomeNavigateActionServer  HomeVacuumActionServer  InitialPose  InspectWaypointActionServer  JackalChargeActionServer  NavigateWaypointActionServer  TestActionServer  TestingPart1  TestingPart2  TestingWarthog  WaitActionServer  WarthogChargeActionServer
(+5 files in other folders)
